--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <iframe
             loading="lazy"
             class="portfolio-iframe"
-            src="https://www.canva.com/design/DAFte6AIOoA/view?embed"
+            <iframe src="src="https://www.canva.com/design/DAFte6AIOoA/view?embed"" frameborder="0" allowfullscreen="true" style="width: 100%; height: 100vh;"></iframe>
             allowfullscreen="allowfullscreen"
             allow="fullscreen"
         ></iframe>
