--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
         <iframe
             loading="lazy"
             class="portfolio-iframe"
-            <iframe src="https://www.canva.com/design/DAFte6AIOoA/view?embed" frameborder="0" allowfullscreen="true" style="width: 100%; height: 80vh;"></iframe>
-            allowfullscreen="allowfullscreen"
-            allow="fullscreen"
+            src="https://www.canva.com/design/DAFte6AIOoA/view?embed"
+            frameborder="0"
+            allowfullscreen="true"
+            style="width: 100%; height: 95vh;"
         ></iframe>
     </div>
     <a
