--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         ></iframe>
     </div>
     <a
-        href="https://www.canva.com/design/DAFte6AIOoA/view?utm_content=DAFte6AIOoA&utm_campaign=designshare&utm_medium=embeds&utm_source=link"
+        href="https://www.canva.com/design/DAFte6AIOoA/view?website#2utm_content=DAFte6AIOoA&utm_campaign=designshare&utm_medium=embeds&utm_source=link"
         target="_blank"
         rel="noopener"
         class="portfolio-link"
